# react-django-news

./: README.md  requirements.txt
news/: build.sh  db.sqlite3  package-lock.json  package.json  pyproject.toml  webpack.config.js
news/api/: middleware.py  models.py  serializers.py  urls.py  views.py
news/api/migrations/: 0001_initial.py  0002_alter_profile_user_alter_user_first_name_and_more.py  0003_alter_profile_user.py  0004_alter_article_id.py  0005_alter_article_id.py  0006_alter_article_id.py  0007_alter_article_id.py  0008_alter_post_id.py  0009_alter_article_title_alter_post_title_post.py  0010_post_archived.py  0011_rename_archived_post_archived_post.py  0012_token.py  0013_delete_token.py  0014_alter_article_title_alter_post_title_post.py  0015_alter_user_id.py  0016_alter_profile_id.py
news/frontend/: package-lock.json  package.json  webpack-stats.json
news/frontend/public/: index.html
news/frontend/src/: App.js  config.js
news/news/: settings.py  urls.py
news/staticfiles/: favicon.c0c45098c4d5.ico.br  staticfiles.json
news/staticfiles/css/: main.6d03ac80.74f70724d44a.css  main.6d03ac80.74f70724d44a.css.br  main.6d03ac80.css.a3f9f40d05f0.map  main.6d03ac80.css.br  main.6d03ac80.css.map.br
news/staticfiles/js/: 150.536de739.chunk.js  150.536de739.chunk.js.map  150.8129c8c8.chunk.cbab372d6090.js  150.8129c8c8.chunk.cbab372d6090.js.br  150.8129c8c8.chunk.js.75fd5cfcc34d.map.br  150.8129c8c8.chunk.js.br  158.a113958f.chunk.js  158.a113958f.chunk.js.map  158.eb6dbd71.chunk.edcb365e0153.js  158.eb6dbd71.chunk.edcb365e0153.js.br  (+51 more)
(+36 files in other folders)
