[tool.poetry]
name = "news"
version = "0.1.0"
description = ""
authors = ["Dexterlente <dexter.lente18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "4.1.5"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
asgiref = "3.6.0"
backports-zoneinfo = "0.2.1"
django-cors-headers = "3.13.0"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.2"
pyjwt = "2.6.0"
python-decouple = "3.7"
pytz = "2022.7.1"
sqlparse = "0.4.3"
uuid = "1.30"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
