[tool.poetry]
name = "news"
version = "0.1.0"
description = ""
authors = ["Dexterlente <dexter.lente18@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
asgiref = "3.6.0"
"backports.zoneinfo" = "0.2.1"
Django = "4.1.5"
django-cors-headers = "3.13.0"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.2"
PyJWT = "2.6.0"
python-decouple = "3.7"
pytz = "2022.7.1"
sqlparse = "0.4.3"
uuid = "1.30"
Brotli = "1.0.9"
dj-database-url = "1.2.0"
gunicorn = "20.1.0"
whitenoise = "6.4.0"
psycopg2-binary = "2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
